--- a/notebooks/01_data_factory.ipynb
+++ b/notebooks/01_data_factory.ipynb
@@ -1,15 +1,180 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "e9d0c79a",
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Working directory: c:\\Development\\financial-intelligence-engine\n",
+      " Config loaded:\n",
+      "  LLM: openrouter (openai/gpt-4o-mini)\n",
+      "  Embeddings: sbert / sentence-transformers/all-MiniLM-L6-v2\n",
+      "  Temperature: 0.2\n",
+      "  Artifacts: ./artifacts\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import sys\n",
+    "from pathlib import Path\n",
+    "from datetime import datetime\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "# Add parent directory to path and change to project rot\n",
+    "import os\n",
+    "\n",
+    "# Get the notebook's current directory and find project root\n",
+    "notebook_dir = Path.cwd()\n",
+    "if notebook_dir.name == \"notebooks\":\n",
+    "    project_root = notebook_dir.parent\n",
+    "else:\n",
+    "    project_root = notebook_dir\n",
+    "\n",
+    "# Change to project root and add to path\n",
+    "os.chdir(project_root)\n",
+    "sys.path.insert(0, str(project_root))\n",
+    "\n",
+    "print(f\" Working directory: {os.getcwd()}\")\n",
+    "\n",
+    "from src.services.llm_services import (\n",
+    "    load_config,\n",
+    "    get_llm,\n",
+    "    get_text_embeddings,\n",
+    "    validate_api_keys,\n",
+    "    print_config_summary\n",
+    ")\n",
+    "\n",
+    "# Load environment variables\n",
+    "load_dotenv()\n",
+    "\n",
+    "# Load configuration from config.yaml \n",
+    "config = load_config(\"src/config/config.yaml\")\n",
+    "\n",
+    "# Validate API keys\n",
+    "validate_api_keys(config, verbose=True)\n",
+    "\n",
+    "# Print summary\n",
+    "print_config_summary(config)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "855db2e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Sahas Induwara\\.conda\\envs\\sahas\\Lib\\site-packages\\transformers\\tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " LLM: openrouter / gpt-4o-mini\n",
+      " Embeddings: sbert / sentence-transformers/all-MiniLM-L6-v2\n",
+      "\n",
+      " Testing LLM API connection...\n",
+      " LLM API test failed: Error code: 401 - {'error': {'message': 'No cookie auth credentials found', 'code': 401}}\n",
+      "  Please check your .env file and API key configuration.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sentence_transformers\n",
+    "# Initialize LLM and Embeddings using factories from llm_services\n",
+    "llm = get_llm(config)\n",
+    "embeddings = get_text_embeddings(config)\n",
+    "\n",
+    "print(f\" LLM: {config['llm_provider']} / {config['llm_model']}\")\n",
+    "print(f\" Embeddings: {config['text_emb_provider']} / {config['text_emb_model']}\")\n",
+    "\n",
+    "# Verify API key with test completion\n",
+    "print(\"\\n Testing LLM API connection...\")\n",
+    "try:\n",
+    "    test_response = llm.invoke(\"Say 'API working!' if you can read this.\")\n",
+    "    test_msg = test_response.content if hasattr(test_response, 'content') else str(test_response)\n",
+    "    print(f\" LLM API verified: {test_msg[:50]}\")\n",
+    "except Exception as e:\n",
+    "    print(f\" LLM API test failed: {e}\")\n",
+    "    print(\"  Please check your .env file and API key configuration.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "37b284cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Working directory: c:\\Development\\financial-intelligence-engine\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get the notebook's current directory and find project root\n",
+    "notebook_dir = Path.cwd()\n",
+    "if notebook_dir.name == \"notebooks\":\n",
+    "    project_root = notebook_dir.parent\n",
+    "else:\n",
+    "    project_root = notebook_dir\n",
+    "\n",
+    "# Change to project root and add to path\n",
+    "os.chdir(project_root)\n",
+    "sys.path.insert(0, str(project_root))\n",
+    "print(f\" Working directory: {os.getcwd()}\")\n",
+    "\n",
+    "from src.services.llm_services import (\n",
+    "    load_config,\n",
+    "    get_llm,\n",
+    "    get_text_embeddings,\n",
+    "    validate_api_keys,\n",
+    "    print_config_summary\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdcec3be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "sahas",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
