feat: created method to read pdf file

--- a/notebooks/01_data_factory.ipynb
+++ b/notebooks/01_data_factory.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "e9d0c79a",
    "metadata": {},
    "outputs": [
@@ -65,18 +65,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "855db2e2",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Sahas Induwara\\.conda\\envs\\sahas\\Lib\\site-packages\\transformers\\tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -112,49 +104,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "37b284cd",
+   "execution_count": 19,
+   "id": "cdcec3be",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Working directory: c:\\Development\\financial-intelligence-engine\n"
+      " Loaded 142 document pages\n",
+      "  Total characters: 639,466\n"
      ]
     }
    ],
    "source": [
-    "# Get the notebook's current directory and find project root\n",
-    "notebook_dir = Path.cwd()\n",
-    "if notebook_dir.name == \"notebooks\":\n",
-    "    project_root = notebook_dir.parent\n",
+    "from langchain_community.document_loaders import PyPDFLoader\n",
+    "from langchain_core.documents import Document\n",
+    "\n",
+    "pdf_dir = Path(config['data_root']) /'pdfs'\n",
+    "\n",
+    "# Try loading PDFs\n",
+    "pdf_files = list(pdf_dir.glob(\"*.pdf\"))\n",
+    "\n",
+    "if len(pdf_files) == 0:\n",
+    "    print(\"  No PDFs found.\")\n",
+    "\n",
     "else:\n",
-    "    project_root = notebook_dir\n",
+    "    # Load PDFs\n",
+    "    documents = []\n",
+    "    for pdf_path in pdf_files:\n",
+    "        loader = PyPDFLoader(str(pdf_path))\n",
+    "        docs = loader.load()\n",
+    "        documents.extend(docs)\n",
     "\n",
-    "# Change to project root and add to path\n",
-    "os.chdir(project_root)\n",
-    "sys.path.insert(0, str(project_root))\n",
-    "print(f\" Working directory: {os.getcwd()}\")\n",
-    "\n",
-    "from src.services.llm_services import (\n",
-    "    load_config,\n",
-    "    get_llm,\n",
-    "    get_text_embeddings,\n",
-    "    validate_api_keys,\n",
-    "    print_config_summary\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cdcec3be",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "    "
+    "print(f\" Loaded {len(documents)} document pages\")\n",
+    "print(f\"  Total characters: {sum(len(d.page_content) for d in documents):,}\")\n"
    ]
   }
  ],
