feat: Saved converted PDF as a md file

--- a/notebooks/01_data_factory.ipynb
+++ b/notebooks/01_data_factory.ipynb
@@ -60,7 +60,8 @@
                 "    load_config,\n",
                 "    get_llm,\n",
                 "    get_pdf_parser,\n",
-                "    print_config_summary\n",
+                "    print_config_summary,\n",
+                "    load_pdf_and_save,\n",
                 ")\n",
                 "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
                 "from langchain_core.prompts import ChatPromptTemplate\n",
@@ -82,7 +83,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": 4,
             "id": "1201dbd0",
             "metadata": {},
             "outputs": [
@@ -91,8 +92,10 @@
                     "output_type": "stream",
                     "text": [
                         "Loading PDF from: c:\\Development\\financial-intelligence-engine\\data\\pdfs\\2024_Annual_Report.pdf\n",
-                        "Started parsing the file under job_id 7c539b01-6381-4e7b-8894-3f99ac695873\n",
+                        "Loading PDF from: c:\\Development\\financial-intelligence-engine\\data\\pdfs\\2024_Annual_Report.pdf\n",
+                        "Started parsing the file under job_id e3a8f383-df48-48f3-a07e-10ae9478282d\n",
                         "Loaded 142 pages/documents.\n",
+                        "Saved parsed content to: c:\\Development\\financial-intelligence-engine\\data\\interim\\2024_Annual_Report_parsed.md\n",
                         "Total Characters: 703039\n",
                         "Sample content:\n",
                         "# On Our Way\n",
@@ -117,14 +120,13 @@
                 "print(f\"Loading PDF from: {pdf_path}\")\n",
                 "\n",
                 "parser = get_pdf_parser(config)\n",
-                "\n",
-                "# Parse the document - LlamaParse returns a list of Document objects\n",
-                "documents = parser.load_data(str(pdf_path))\n",
-                "\n",
-                "print(f\"Loaded {len(documents)} pages/documents.\")\n",
-                "\n",
-                "# Combine into full text for chunking\n",
-                "full_text = \"\\n\\n\".join([doc.text for doc in documents])\n",
+                "# load_pdf_and_save RETURNS THE FULL TEXT STRING\n",
+                "full_text = load_pdf_and_save(\n",
+                "    pdf_path=str(pdf_path),\n",
+                "    parser=parser,\n",
+                "    output_dir=str(project_root / \"data/interim\")\n",
+                ")\n",
+                "# No need to join! full_text is already a string.\n",
                 "print(f\"Total Characters: {len(full_text)}\")\n",
                 "print(\"Sample content:\")\n",
                 "print(full_text[:500])"
@@ -140,7 +142,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": null,
             "id": "cd92c6dd",
             "metadata": {},
             "outputs": [
@@ -175,7 +177,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 4,
+            "execution_count": null,
             "id": "78ed187d",
             "metadata": {},
             "outputs": [],
@@ -222,7 +224,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 5,
+            "execution_count": null,
             "id": "18297fcc",
             "metadata": {},
             "outputs": [
@@ -712,7 +714,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 6,
+            "execution_count": null,
             "id": "bda32ba4",
             "metadata": {},
             "outputs": [
@@ -751,7 +753,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 7,
+            "execution_count": null,
             "id": "eedb1010",
             "metadata": {},
             "outputs": [
