feat: Add Finetuned LLM notebook

--- a/notebooks/01_data_factory.ipynb
+++ b/notebooks/01_data_factory.ipynb
@@ -3861,7 +3861,45 @@
                         "question : How does the phrasing 'disproportionate effect' contribute to the overall message regarding consumer spending?\n",
                         "Answer : The phrasing 'disproportionate effect' emphasizes that small businesses, particularly those in the network, are more vulnerable to declines in consumer spending compared to larger businesses. This highlights the potential severity of the impact on the Delivery offering, suggesting that any downturn in discretionary spending could significantly harm these smaller merchants and, consequently, the overall business and operating results.\n",
                         "question : What is the definition of network liquidity?\n",
-                        "Answer : Information not found in context.\n"
+                        "Answer : Information not found in context.\n",
+                        "question : How does network liquidity impact financial transactions?\n",
+                        "Answer : Information not found in context.\n",
+                        "question : What are the key factors that influence network liquidity?\n",
+                        "Answer : Information not found in context.\n",
+                        "question : Can you provide an example of a situation where network liquidity is crucial?\n",
+                        "Answer : Information not found in context.\n",
+                        "question : What are the potential risks associated with low network liquidity?\n",
+                        "Answer : Information not found in context.\n",
+                        "question : How is network liquidity measured in financial markets?\n",
+                        "Answer : Information not found in context.\n",
+                        "question : In what ways can businesses improve their network liquidity?\n",
+                        "Answer : Information not found in context.\n",
+                        "question : What tone does the text convey regarding the importance of network liquidity?\n",
+                        "Answer : Information not found in context.\n",
+                        "question : Are there any specific phrases in the text that emphasize the benefits of network liquidity?\n",
+                        "Answer : Information not found in context.\n",
+                        "question : How might the concept of network liquidity be creatively illustrated in a financial presentation?\n",
+                        "Answer : Information not found in context.\n",
+                        "question : What specific factors are mentioned that could adversely affect operating results?\n",
+                        "Answer : The specific factors mentioned that could adversely affect operating results include increases in fuel prices, food costs, labor and employee benefit costs, rental costs, energy costs, and vehicle purchase, rental, insurance, or maintenance costs. Additionally, inflation and global supply chain challenges are also noted as contributing factors.\n",
+                        "question : How might increased fuel prices due to geopolitical conflicts impact Drivers and Carriers?\n",
+                        "Answer : Increased fuel prices due to geopolitical conflicts may cause Drivers and Carriers to spend less time providing services on the platform or to seek alternative sources of income.\n",
+                        "question : What international market is specifically mentioned as experiencing increased operating costs?\n",
+                        "Answer : Egypt.\n",
+                        "question : How might increased costs lead to a decline in order volume according to the text?\n",
+                        "Answer : Increased costs may lead merchants to pass those costs on to consumers by raising prices. This price increase could result in a decline in order volume as consumers may reduce their purchases in response to higher prices.\n",
+                        "question : What are the potential consequences for Drivers and Carriers as a result of rising costs?\n",
+                        "Answer : The potential consequences for Drivers and Carriers as a result of rising costs include spending less time providing services on the platform, seeking alternative sources of income, and a decreased supply of Drivers. Additionally, increased costs may lead to a decline in shipments on the platform.\n",
+                        "question : What type of costs are mentioned that may increase due to inflation for merchants?\n",
+                        "Answer : The types of costs mentioned that may increase due to inflation for merchants include increased food costs, increased labor and employee benefit costs, increased rental costs, and increased energy costs.\n",
+                        "question : In what ways could increased costs affect the supply of Drivers and consumers on the platform?\n",
+                        "Answer : Increased costs could cause Drivers to spend less time providing services on the platform or seek alternative sources of income. Additionally, increased costs may lead merchants to pass costs on to consumers by raising prices, which could result in a decline in order volume and potentially decrease the supply of consumers on the platform.\n",
+                        "question : What tone does the text take when discussing the challenges faced by Drivers and Carriers?\n",
+                        "Answer : The tone of the text is cautionary and concerned, highlighting the adverse effects of rising costs and inflation on Drivers and Carriers, as well as the potential consequences for their operations and the overall platform.\n",
+                        "question : How does the text describe the unpredictability of the factors affecting costs?\n",
+                        "Answer : The text describes the unpredictability of the factors affecting costs by stating that many of these factors, such as inflation, increased fuel prices, and global supply chain challenges, are beyond the control of Drivers, Carriers, and merchants. This unpredictability can lead to increased costs that may cause Drivers and Carriers to reduce their service time or seek alternative income, and may also result in merchants passing costs onto consumers, potentially leading to a decline in order volume and operations.\n",
+                        "question : What specific global events are cited as contributing to increased fuel prices?\n",
+                        "Answer : The specific global events cited as contributing to increased fuel prices are the conflict between Russia and Ukraine and the conflict in the Middle East.\n"
                     ]
                 }
             ],
