feat: model card for hugging face

--- a/notebooks/02_finetuning_intern.ipynb
+++ b/notebooks/02_finetuning_intern.ipynb
@@ -129,6 +129,7 @@
                 "    # Model\n",
                 "    \"model_id\": \"meta-llama/Meta-Llama-3-8B-Instruct\",\n",
                 "    \"new_model_name\": \"Llama-3-8b-Financial-Intern\",\n",
+                "    \"hf_username\": \"p-sahas\", \n",
                 "    \n",
                 "    # LoRA\n",
                 "    \"lora_r\": 64,\n",
@@ -340,7 +341,75 @@
                 "id": "save_header"
             },
             "source": [
-                "## 8. Save & Push"
+                "## 8. Save, Model Card & Push"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {
+                "id": "model_card"
+            },
+            "outputs": [],
+            "source": [
+                "# Create Model Card (README.md)\n",
+                "model_card_content = f\"\"\"\n",
+                "---\n",
+                "base_model: {CONFIG['model_id']}\n",
+                "library_name: peft\n",
+                "license: mit\n",
+                "tags:\n",
+                "- finance\n",
+                "- llama-3\n",
+                "- 4-bit\n",
+                "- loRA\n",
+                "---\n",
+                "\n",
+                "# {CONFIG['new_model_name']}\n",
+                "\n",
+                "This model is a fine-tuned version of **{CONFIG['model_id']}** on the **Uber 2024 Annual Report** dataset. \n",
+                "It is designed to act as a financial analyst \"Intern\", capable of answering questions with the specific strategy and tone of the source document.\n",
+                "\n",
+                "## Model Details\n",
+                "- **Base Model:** {CONFIG['model_id']}\n",
+                "- **Architecture:** 4-bit Quantization (NF4) + LoRA Adapters\n",
+                "- **Task:** Financial Question Answering\n",
+                "\n",
+                "## Training Configuration\n",
+                "- **LoRA Rank:** {CONFIG['lora_r']}\n",
+                "- **LoRA Alpha:** {CONFIG['lora_alpha']}\n",
+                "- **Batch Size:** {CONFIG['batch_size']}\n",
+                "- **Learning Rate:** {CONFIG['learning_rate']}\n",
+                "- **Epochs:** {CONFIG['num_epochs']}\n",
+                "\n",
+                "## Usage\n",
+                "```python\n",
+                "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
+                "from peft import PeftModel, PeftConfig\n",
+                "\n",
+                "base_model_id = \"{CONFIG['model_id']}\"\n",
+                "adapter_model_id = \"{CONFIG['hf_username']}/{CONFIG['new_model_name']}\"\n",
+                "\n",
+                "# Load Base Model\n",
+                "base_model = AutoModelForCausalLM.from_pretrained(base_model_id)\n",
+                "# Load Adapter\n",
+                "model = PeftModel.from_pretrained(base_model, adapter_model_id)\n",
+                "tokenizer = AutoTokenizer.from_pretrained(base_model_id)\n",
+                "\n",
+                "input_text = \"What is the company's strategy for 2024?\"\n",
+                "inputs = tokenizer(input_text, return_tensors=\"pt\")\n",
+                "outputs = model.generate(**inputs, max_new_tokens=100)\n",
+                "print(tokenizer.decode(outputs[0]))\n",
+                "```\n",
+                "\"\"\"\n",
+                "\n",
+                "# Ensure directory exists\n",
+                "os.makedirs(CONFIG['new_model_name'], exist_ok=True)\n",
+                "\n",
+                "with open(f\"{CONFIG['new_model_name']}/README.md\", \"w\") as f:\n",
+                "    f.write(model_card_content)\n",
+                "\n",
+                "print(f\"Model Card saved to {CONFIG['new_model_name']}/README.md\")"
             ]
         },
         {
