fix: import issue

--- a/notebooks/02_finetuning_intern.ipynb
+++ b/notebooks/02_finetuning_intern.ipynb
@@ -23,27 +23,102 @@
                 "id": "setup_header"
             },
             "source": [
-                "## 1. Setup & Dependencies"
+                "## 1. Setup & Dependencies\n",
+                "\n",
+                "**IMPORTANT:** If you see an error like `AttributeError: partially initialized module 'torchvision'` or `ModuleNotFoundError: PreTrainedModel`, you **MUST**:\n",
+                "1. Run the cell below.\n",
+                "2. **Restart the Runtime** (Runtime -> Restart session).\n",
+                "3. Run the valid imports cell (skip the install cell if you just ran it)."
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 1,
             "metadata": {
                 "id": "install_deps"
             },
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Found existing installation: torchvision 0.20.1+cu121\n",
+                        "Uninstalling torchvision-0.20.1+cu121:\n",
+                        "  Successfully uninstalled torchvision-0.20.1+cu121\n",
+                        "Found existing installation: torch 2.5.1+cu121\n",
+                        "Uninstalling torch-2.5.1+cu121:\n",
+                        "  Successfully uninstalled torch-2.5.1+cu121\n",
+                        "Found existing installation: torchaudio 2.5.1+cu121\n",
+                        "Uninstalling torchaudio-2.5.1+cu121:\n",
+                        "  Successfully uninstalled torchaudio-2.5.1+cu121\n",
+                        "Looking in indexes: https://download.pytorch.org/whl/cu121\n",
+                        "Collecting torch\n",
+                        "  Using cached https://download.pytorch.org/whl/cu121/torch-2.5.1%2Bcu121-cp312-cp312-linux_x86_64.whl (780.4 MB)\n",
+                        "Collecting torchvision\n",
+                        "  Using cached https://download.pytorch.org/whl/cu121/torchvision-0.20.1%2Bcu121-cp312-cp312-linux_x86_64.whl (7.3 MB)\n",
+                        "Collecting torchaudio\n",
+                        "  Using cached https://download.pytorch.org/whl/cu121/torchaudio-2.5.1%2Bcu121-cp312-cp312-linux_x86_64.whl (3.4 MB)\n",
+                        "Requirement already satisfied: filelock in /usr/local/lib/python3.12/dist-packages (from torch) (3.20.3)\n",
+                        "Requirement already satisfied: typing-extensions>=4.8.0 in /usr/local/lib/python3.12/dist-packages (from torch) (4.15.0)\n",
+                        "Requirement already satisfied: networkx in /usr/local/lib/python3.12/dist-packages (from torch) (3.6.1)\n",
+                        "Requirement already satisfied: jinja2 in /usr/local/lib/python3.12/dist-packages (from torch) (3.1.6)\n",
+                        "Requirement already satisfied: fsspec in /usr/local/lib/python3.12/dist-packages (from torch) (2025.3.0)\n",
+                        "Requirement already satisfied: nvidia-cuda-nvrtc-cu12==12.1.105 in /usr/local/lib/python3.12/dist-packages (from torch) (12.1.105)\n",
+                        "Requirement already satisfied: nvidia-cuda-runtime-cu12==12.1.105 in /usr/local/lib/python3.12/dist-packages (from torch) (12.1.105)\n",
+                        "Requirement already satisfied: nvidia-cuda-cupti-cu12==12.1.105 in /usr/local/lib/python3.12/dist-packages (from torch) (12.1.105)\n",
+                        "Requirement already satisfied: nvidia-cudnn-cu12==9.1.0.70 in /usr/local/lib/python3.12/dist-packages (from torch) (9.1.0.70)\n",
+                        "Requirement already satisfied: nvidia-cublas-cu12==12.1.3.1 in /usr/local/lib/python3.12/dist-packages (from torch) (12.1.3.1)\n",
+                        "Requirement already satisfied: nvidia-cufft-cu12==11.0.2.54 in /usr/local/lib/python3.12/dist-packages (from torch) (11.0.2.54)\n",
+                        "Requirement already satisfied: nvidia-curand-cu12==10.3.2.106 in /usr/local/lib/python3.12/dist-packages (from torch) (10.3.2.106)\n",
+                        "Requirement already satisfied: nvidia-cusolver-cu12==11.4.5.107 in /usr/local/lib/python3.12/dist-packages (from torch) (11.4.5.107)\n",
+                        "Requirement already satisfied: nvidia-cusparse-cu12==12.1.0.106 in /usr/local/lib/python3.12/dist-packages (from torch) (12.1.0.106)\n",
+                        "Requirement already satisfied: nvidia-nccl-cu12==2.21.5 in /usr/local/lib/python3.12/dist-packages (from torch) (2.21.5)\n",
+                        "Requirement already satisfied: nvidia-nvtx-cu12==12.1.105 in /usr/local/lib/python3.12/dist-packages (from torch) (12.1.105)\n",
+                        "Requirement already satisfied: triton==3.1.0 in /usr/local/lib/python3.12/dist-packages (from torch) (3.1.0)\n",
+                        "Requirement already satisfied: setuptools in /usr/local/lib/python3.12/dist-packages (from torch) (75.2.0)\n",
+                        "Requirement already satisfied: sympy==1.13.1 in /usr/local/lib/python3.12/dist-packages (from torch) (1.13.1)\n",
+                        "Requirement already satisfied: nvidia-nvjitlink-cu12 in /usr/local/lib/python3.12/dist-packages (from nvidia-cusolver-cu12==11.4.5.107->torch) (12.8.93)\n",
+                        "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /usr/local/lib/python3.12/dist-packages (from sympy==1.13.1->torch) (1.3.0)\n",
+                        "Requirement already satisfied: numpy in /usr/local/lib/python3.12/dist-packages (from torchvision) (2.0.2)\n",
+                        "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in /usr/local/lib/python3.12/dist-packages (from torchvision) (11.3.0)\n",
+                        "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.12/dist-packages (from jinja2->torch) (3.0.3)\n",
+                        "Installing collected packages: torch, torchvision, torchaudio\n",
+                        "Successfully installed torch-2.5.1+cu121 torchaudio-2.5.1+cu121 torchvision-0.20.1+cu121\n",
+                        "Installation complete. PLEASE RESTART RUNTIME now if this is the first run.\n"
+                    ]
+                }
+            ],
             "source": [
-                "!pip install -q -U torch transformers peft trl bitsandbytes accelerate datasets scipy matplotlib"
+                "# 1. Uninstall potentially conflicting versions first\n",
+                "!pip uninstall -y torchvision torch torchaudio\n",
+                "\n",
+                "# 2. Install compatible Torch + Torchvision\n",
+                "!pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121\n",
+                "\n",
+                "# 3. Install other dependencies\n",
+                "!pip install -q -U transformers peft trl bitsandbytes accelerate datasets scipy matplotlib\n",
+                "\n",
+                "print(\"Installation complete. PLEASE RESTART RUNTIME now if this is the first run.\")"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 2,
             "metadata": {
                 "id": "imports_and_env"
             },
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "PyTorch Version: 2.5.1+cu121\n",
+                        "CUDA Available: True\n",
+                        "Device: Tesla T4\n",
+                        "VRAM: 14.56 GB\n"
+                    ]
+                }
+            ],
             "source": [
                 "import torch\n",
                 "import os\n",
@@ -55,7 +130,6 @@
                 "    AutoTokenizer,\n",
                 "    BitsAndBytesConfig,\n",
                 "    TrainingArguments,\n",
-                "    pipeline,\n",
                 "    logging,\n",
                 ")\n",
                 "from peft import LoraConfig, PeftModel\n",
@@ -81,11 +155,20 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 3,
             "metadata": {
                 "id": "set_seeds"
             },
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "✅ Seeds set to 42 for reproducibility\n",
+                        "⚠️ Note: Full determinism on GPU is not guaranteed due to non-deterministic operations\n"
+                    ]
+                }
+            ],
             "source": [
                 "SEED = 42\n",
                 "\n",
@@ -104,8 +187,8 @@
                 "    torch.backends.cudnn.deterministic = True\n",
                 "    torch.backends.cudnn.benchmark = False\n",
                 "\n",
-                "print(f\"✅ Seeds set to {SEED} for reproducibility\")\n",
-                "print(\"⚠️ Note: Full determinism on GPU is not guaranteed due to non-deterministic operations\")"
+                "print(f\" Seeds set to {SEED} for reproducibility\")\n",
+                "print(\" Note: Full determinism on GPU is not guaranteed due to non-deterministic operations\")"
             ]
         },
         {
@@ -119,7 +202,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 4,
             "metadata": {
                 "id": "config_cell"
             },
@@ -165,7 +248,20 @@
             "metadata": {
                 "id": "hf_auth"
             },
-            "outputs": [],
+            "outputs": [
+                {
+                    "ename": "TimeoutException",
+                    "evalue": "Requesting secret HF_TOKEN timed out. Secrets can only be fetched when running from the Colab UI.",
+                    "output_type": "error",
+                    "traceback": [
+                        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+                        "\u001b[0;31mTimeoutException\u001b[0m                          Traceback (most recent call last)",
+                        "\u001b[0;32m/tmp/ipython-input-565404535.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mfrom\u001b[0m \u001b[0mgoogle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolab\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0muserdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mtoken\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0muserdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'HF_TOKEN'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mlogin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtoken\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mexcept\u001b[0m \u001b[0mImportError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+                        "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/google/colab/userdata.py\u001b[0m in \u001b[0;36mget\u001b[0;34m(key)\u001b[0m\n\u001b[1;32m     64\u001b[0m     )\n\u001b[1;32m     65\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mresp\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 66\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mTimeoutException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     67\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mresp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'exists'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m     \u001b[0;32mraise\u001b[0m \u001b[0mSecretNotFoundError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+                        "\u001b[0;31mTimeoutException\u001b[0m: Requesting secret HF_TOKEN timed out. Secrets can only be fetched when running from the Colab UI."
+                    ]
+                }
+            ],
             "source": [
                 "from huggingface_hub import login\n",
                 "\n",
